# BackgroundDeletePCApp

./: .gitignore  README.md  Remover_background_UI.py  pyproject.toml
utils/: backgroud_remove.py
