[project]
name = "appflet-imgbackgrounddelete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]==0.28.3",
    "llvmlite>=0.43.0",
    "numba>=0.60.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.22.1",
    "rembg==2.0.67",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
